# asistente_gastos

./: .env.example  .gitignore  AWS_DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md  SETUP_GUIDE.md  SWITCH_AWS_ACCOUNT.md  SYSTEM_REVIEW_V1.md  USER_DETECTION_TESTS.md  V2_READY_TO_TEST.md  dockerfile  pyproject.toml  requirements.txt
docs/: ANALYTICS_GUIDE.md  CHANGELOG_V2.md  CHANGELOG_V3.md  COMIENZA_AQUI.md  CREDENTIALS_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  FINAL_DEPLOYMENT_V2.1.md  FIXES_APPLIED.md  IMPLEMENTATION_DETAILS.md  PROJECT_ANALYSIS.md  PROJECT_STATUS.md  PR_V3_SUMMARY.md  QUICK_START.md  SESSION_SUMMARY.md  SETUP_COMPLETE.md  SETUP_FLOWCHART.md  START_HERE.md  TELEGRAM_API_REFERENCE.md  USER_DETECTION_DESIGN.md  V3_TEST_RESULTS.md
infra/modules/lambda_function/: variables.tf
infraestructure/modules/lambda_function/: main.tf  outputs.tf
infraestructure/prod/lamda/: terragrunt.hcl
src/app/: llm.py  main.py  sheets.py
src/app/analytics/: __init__.py  charts.py  loader.py  metrics.py  suggestions.py
src/credentials/: google_sa_example.json
